--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,72 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.bgRadient{
+  background: radial-gradient(circle 180px at 50% 100%,#5833a6, #000);
+  height: 200px;
+}
+
+.parallax{
+  background-size: cover;
+  background-position: bottom;
+  width: 100%;
+  height: 768px;
+  position: fixed;
+}
+
+.animation, .animation_layer {
+	height: 1000px;
+}
+
+.animation {
+  display: block;
+	position: relative;
+	z-index: 10;
+}
+
+.animation_layer {
+	background-position: bottom center;
+	background-size: auto 1000px;
+	background-repeat: repeat-x;
+	width: 100%;
+	position: absolute;
+}
+.animation_layer.parallax {
+	position: fixed;
+}
+
+#artback {
+  background-image: url(/images/background.png);
+}
+
+#mountain {
+  background-image: url(/images/mountains.png);
+}
+
+#logoland {
+  background-image: url(/images/logo_land.png);
+}
+
+#jungle1 {
+  background-image: url(/images/jungle1.png);
+}
+
+#jungle2 {
+  background-image: url(/images/jungle2.png);
+}
+
+#jungle3 {
+  background-image: url(/images/jungle3.png);
+}
+
+#jungle4 {
+  background-image: url(/images/jungle4.png);
+}
+
+#jungle5 {
+  background-image: url(/images/jungle5.png);
+}
+
+#manonmountain {
+  background-image: url(/images/man_on_mountain.png);
+}
